# origin

./: .gitignore  CODE OF CONDUCT.md  CONTRIBUTING.md  README.md  eslint.config.js  package-lock.json  package.json
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/app/: layout.tsx
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  dap.rs  fs.rs  git.rs  keychain.rs  lib.rs  lsp.rs  main.rs  patch.rs  search.rs  system.rs  terminal.rs  tree.rs
src/assets/: logo.icns
src/components/: ActivityBar.tsx  ContextMenu.tsx  DebugLaunchForm.tsx  DebugPanel.tsx  DebugToolbar.tsx  FileTree.tsx  SearchPanel.tsx  Sidebar.tsx  SourceTreePanel.tsx  StatusBar.tsx  StatusIsland.tsx  TitleBar.tsx
src/components/ai/: AiPanel.tsx  ChatBox.tsx  MarkdownMessage.tsx  MentionDropdown.tsx  MessageBubble.tsx  PlanCard.tsx  PreferencesDropdown.tsx  ToolCallCard.tsx  providers.ts
src/components/editor/: AiDiffPane.tsx  Editor.tsx  EditorEmptyState.tsx  TabBar.tsx  WebPreviewPane.tsx  languageSupport.ts
src/components/onboarding/: ConnectAIPage.tsx  Onboarding.tsx  PersonalizePage.tsx  WelcomePage.tsx  data.ts
src/components/palette/: CommandPalette.tsx
src/components/settings/: KeybindingsSection.tsx  SettingsPanel.tsx
src/components/terminal/: Terminal.tsx  TerminalPanel.tsx
src/components/ui/: DropdownMenu.tsx  ErrorBoundary.tsx  Toast.tsx  Tooltip.tsx
src/context/: CommandContext.tsx  DebugContext.tsx  WorkspaceContext.tsx
src/hooks/: useGlobalKeybindings.ts  useTabs.ts  useWorkspacePersistence.ts
src/lib/: ai.ts  aiAutocomplete.ts  aiTypes.ts  applyEdit.ts  dap.ts  dapCm6.ts  db.ts  fileColors.ts  fs.ts  git.ts  hunkControls.ts  keybindings.ts  lsp.ts  lspCm6.ts  patch.ts  pinboardStore.ts  pricing.ts  resolvePath.ts  resolveTargetPath.ts  search.ts  secrets.ts  sessionStore.ts  settings.ts  sourceTree.ts  system.ts  tauri-fetch.ts  terminal.ts  usage.ts
src/lib/__tests__/: applyEdit.test.ts  resolvePath.test.ts  resolveTargetPath.test.ts  sessionStore.test.ts
src/lib/agent/: compactHistory.ts  planTypes.ts  providers.ts  run.ts  security.ts  tools.ts
src/lib/agent/__tests__/: planTypes.test.ts
src/themes/: ThemeContext.tsx  applyTheme.ts  types.ts
src/themes/origin-dark/: theme.json
src/themes/origin-light/: theme.json
